--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,4 +14,5 @@ test:
     - npm install
     - cd ../../
     - npm i lerna -g
-    - lerna run test
+    - lerna run lint
+    - lerna run coverage-ci
