--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -135,6 +135,7 @@
     "style-loader": "^0.23.1",
     "stylelint": "7.0.2",
     "stylelint-config-standard": "11.0.0",
+    "svgo": "1.3.0",
     "tty-table": "1.0.7",
     "url-loader": "^2.2.0",
     "wdio": "^3.0.0",
