--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ui-library",
-  "version": "4.0.0-BETA.7",
+  "version": "0.0.0",
   "description": "A UI library made of reusable React components, util functions and static assets (including CSS, Fonts, and Icons).",
   "author": "UX Front-End Development Team",
   "license": "ISC",
