--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,5 @@ packages/end-user/build-css
 packages/end-user/static
 
 packages/ui-library/backstop_data/html_report/
-packages/ui-library/backstop_data/bitmaps_test/
+packages/ui-library/backstop_data/bitmaps_test/*
 packages/ui-library/backstop.json
