Makefile for end user upload to demo

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,6 @@ test:
     - lerna bootstrap
     - lerna run lint
     - lerna run coverage-ci
-    - lerna run static
-    - cd packages/ui-library
-    - npm i
-    - npm run backstop-ci
+    - lerna run pack
+    - lerna run backstop-ci
+
