--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -179,9 +179,10 @@
     "generate-template-dictionary": "node ./generate-template-dictionary",
     "check-licenses": "license-checker --production --excludePackages '@pingone/net@0.1.3' --onlyAllow 'MIT;BSD-3-Clause;Apache-2.0;BSD-2-Clause;ISC;Public Domain'",
     "lint": "npm run jslint && npm run stylelint",
-    "backstop-ci": "rm -rf ./backstop.json && npm run pack && (http-server ./build --p 8085 & SERVER_ID=$! && node ./runBackstopTests.js --ci && kill -9 $SERVER_ID)",
+    "backstop-ci": "rm -rf ./backstop.json && (http-server ./build --p 8085 & SERVER_ID=$! && node ./runBackstopTests.js --ci && kill -9 $SERVER_ID)",
     "backstop-approve": "npm run pack && (http-server ./build --p 8085 & SERVER_ID=$! && node ./runBackstopTests.js --approve && kill -9 $SERVER_ID)",
-    "backstop-test": "rm -rf ./backstop.json && npm run pack && (http-server ./build --p 8085 & SERVER_ID=$! && node ./runBackstopTests.js && kill -9 $SERVER_ID)"
+    "backstop-test": "rm -rf ./backstop.json && npm run pack && (http-server ./build --p 8085 & SERVER_ID=$! && node ./runBackstopTests.js && kill -9 $SERVER_ID)",
+    "append-version": "node ../../append_current_version.js"
   },
   "csrfDataSourceApiConfig": {}
 }
