--- a/packages/end-user/Makefile
+++ b/packages/end-user/Makefile
@@ -1,5 +1,5 @@
 include ../../Makefile
 
-package-and-upload-end-user: HOSTING_PROJECT_BASE:=${HOSTING_PROJECT_BASE}enduser/
+package-and-upload-end-user: HOSTING_PROJECT_BASE:=${HOSTING_PROJECT_BASE}end-user/
 package-and-upload-end-user: package-and-upload-for-hosting
 
