--- a/packages/ui-library/Makefile
+++ b/packages/ui-library/Makefile
@@ -2,7 +2,7 @@ include ../../Makefile
 
 build-cdn-assets:
 	# CDN_VERSION variable will be passed in from the command line, see Jenkinsfile.ui-library.build for example
-	npm run build-css
+	yarn run build-css
 	mkdir cdn/${CDN_VERSION}
 	mv cdn/css cdn/${CDN_VERSION}
 
