--- a/packages/end-user/.gitlab-ci.yml
+++ b/packages/end-user/.gitlab-ci.yml
@@ -15,7 +15,7 @@ install_dependencies:
     - platform-build-node-ui-page
     - platform-build-node-fragment
   script:
-    - npm install
+    - yarn install --ignore-engines
   artifacts:
     paths:
       - node_modules/
@@ -26,4 +26,4 @@ testing_testing:
     - platform-publish-node-fragment
     - platform-build-node-ui-page
     - platform-build-node-fragment
-  script: npm run build
+  script: yarn run build
