--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -159,8 +159,8 @@
     "pack-landing": "webpack --progress --colors --config webpack.landing.js",
     "webpack-start-landing": "webpack-dev-server --content-base hosting/ -d --hot --port 8082 --host 0.0.0.0 --inline --progress --colors --config webpack.landing.js",
     "webpack-start": "webpack-dev-server -d --hot --host 0.0.0.0 --port 8080 --inline --progress --colors --config webpack.dev.js",
-    "start": "npm run doc & npm run webpack-start",
-    "start-w-doc": "npm run doc && npm run webpack-start",
+    "start": "yarn run doc & yarn run webpack-start",
+    "start-w-doc": "yarn run doc && yarn run webpack-start",
     "doc": "jsdoc -c ./jsdoc.json",
     "test-w-docker": "./node_modules/.bin/wdio wdio.dev.conf.js",
     "jslint": "eslint --ext .js,.jsx .",
@@ -169,19 +169,19 @@
     "coverage": "jest --coverage && node ./clean-after.js",
     "coverage-ci": "jest --coverage --ci && node ./clean-after.js",
     "test": "jest --silent",
-    "verify": "npm run jslint && npm run stylelint && npm run test",
+    "verify": "yarn run jslint && yarn run stylelint && yarn run test",
     "integration": "wdio wdio.conf.js",
-    "postintegration": "npm run clean-processes",
+    "postintegration": "yarn run clean-processes",
     "clean-screenshots": "node ./clean-screenshot.js",
     "clean-selenium-log": "node ./clean-selenium-log.js",
     "build-css": "gulp build-css --destination cdn/css",
     "generate-release-notes": "node ./generateReleaseNotes.js",
     "generate-template-dictionary": "node ./generate-template-dictionary",
     "check-licenses": "license-checker --production --excludePackages '@pingone/net@0.1.3' --onlyAllow 'MIT;BSD-3-Clause;Apache-2.0;BSD-2-Clause;ISC;Public Domain'",
-    "lint": "npm run jslint && npm run stylelint",
+    "lint": "yarn run jslint && yarn run stylelint",
     "backstop-ci": "rm -rf ./backstop.json && (http-server ./build --p 8085 & SERVER_ID=$! && node ./runBackstopTests.js --ci && kill -9 $SERVER_ID)",
-    "backstop-approve": "npm run pack && (http-server ./build --p 8085 & SERVER_ID=$! && node ./runBackstopTests.js --approve && kill -9 $SERVER_ID)",
-    "backstop-test": "rm -rf ./backstop.json && npm run pack && (http-server ./build --p 8085 & SERVER_ID=$! && node ./runBackstopTests.js && kill -9 $SERVER_ID)",
+    "backstop-approve": "yarn run pack && (http-server ./build --p 8085 & SERVER_ID=$! && node ./runBackstopTests.js --approve && kill -9 $SERVER_ID)",
+    "backstop-test": "rm -rf ./backstop.json && yarn run pack && (http-server ./build --p 8085 & SERVER_ID=$! && node ./runBackstopTests.js && kill -9 $SERVER_ID)",
     "append-version": "node ../../append_current_version.js"
   },
   "csrfDataSourceApiConfig": {}
