UIP-3088: Upload Ping logo to CDN [end-user]

--- a/packages/end-user/package.json
+++ b/packages/end-user/package.json
@@ -140,7 +140,7 @@
   },
   "scripts": {
     "pack": "rm -rf ./build && webpack --config webpack.static.js",
-    "cdn": "rm -rf ./cdn && webpack --config webpack.cdn.js && cp -R ./src/icons/. ./cdn/*/icons",
+    "cdn": "rm -rf ./cdn && webpack --config webpack.cdn.js && cp -R ./src/icons/. ./cdn/*/icons && cp -R ./src/images ./cdn/*/",
     "start": "webpack-dev-server --config webpack.dev.js",
     "lint": "eslint src/** && stylelint src/**/*.scss",
     "doc": "jsdoc -c ./jsdoc.json",
