--- a/packages/end-user/package.json
+++ b/packages/end-user/package.json
@@ -30,10 +30,15 @@
     "@babel/plugin-external-helpers": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.4.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.4.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@storybook/addon-actions": "^5.3.12",
+    "@storybook/addon-knobs": "^5.3.12",
+    "@storybook/addon-links": "^5.3.12",
+    "@storybook/addon-storysource": "^5.3.12",
+    "@storybook/react": "^5.3.12",
     "autoprefixer": "^8.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^9.0.0",
@@ -58,12 +63,10 @@
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-debug": "^4.0.0",
-    "highlight.js": "^9.12.0",
     "html-webpack-plugin": "^3.2.0",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^24.8.0",
     "jest-transform-stub": "^2.0.0",
-    "js-beautify": "^1.7.5",
     "jsdoc": "^3.6.2",
     "jsdoc-babel": "^0.5.0",
     "jsdoc-jsx": "^0.1.0",
@@ -139,9 +142,9 @@
     }
   },
   "scripts": {
-    "pack": "rm -rf ./build && webpack --config webpack.static.js",
+    "pack": "rm -rf ./build && build-storybook -o build",
     "cdn": "rm -rf ./cdn && webpack --config webpack.cdn.js && cp -R ./src/icons/. ./cdn/*/icons && cp -R ./src/images ./cdn/*/",
-    "start": "webpack-dev-server --config webpack.dev.js",
+    "start": "start-storybook -p 6006 -s ./src/images",
     "lint": "eslint src/** && stylelint src/**/*.scss",
     "doc": "jsdoc -c ./jsdoc.json",
     "dist": "gulp build-dist && yarn run cdn && cp -R ./cdn/*/. ./dist/",
