--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -74,8 +74,8 @@
     "create-react-class": "^15.6.3",
     "css-loader": "^2.1.1",
     "cssnano": "^4.1.10",
-    "enzyme": "3.7.0",
-    "enzyme-adapter-react-16": "1.6.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "es6-promise": "3.2.1",
     "eslint": "^6.5.1",
     "eslint-plugin-import": "^2.14.0",
