--- a/packages/end-user/package.json
+++ b/packages/end-user/package.json
@@ -19,6 +19,7 @@
     "popper.js": "^1.15.0",
     "raf": "^3.4.1",
     "re-mutable": "^1.2.6",
+    "react-color": "^2.18.0",
     "react-portal": "^4.2.0",
     "react-tooltip": "^3.11.0",
     "styled-components": "^4.3.2",
@@ -121,6 +122,9 @@
     "testMatch": [
       "**/**/*.test.js?(x)"
     ],
+    "globals": {
+      "END_USER_VERSION": "0.0.0"
+    },
     "testPathIgnorePatterns": [
       "/node/",
       "/node_modules/",
@@ -145,7 +149,7 @@
   "scripts": {
     "pack": "rm -rf ./build && build-storybook -o build",
     "cdn": "rm -rf ./cdn && webpack --config webpack.cdn.js && cp -R ./src/icons/. ./cdn/*/icons && cp -R ./src/images ./cdn/*/",
-    "start": "start-storybook -p 6006 -s ./src/images",
+    "start": "start-storybook -p 6006",
     "lint": "eslint src/** && stylelint src/**/*.scss",
     "doc": "jsdoc -c ./jsdoc.json",
     "dist": "gulp build-dist && yarn run cdn && cp -R ./cdn/*/. ./dist/",
