--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -40,7 +40,7 @@
     "react-dnd": "^2.5.4",
     "react-dnd-html5-backend": "^2.5.4",
     "react-portal": "^4.2.0",
-    "react-tooltip": "^3.11.1",
+    "react-tooltip": "3.11.5",
     "recharts": "^1.5.0",
     "reselect": "^2.5.1",
     "underscore": "^1.8.3",
