UIP-3394: Select copied text

--- a/packages/ui-library/.babelrc
+++ b/packages/ui-library/.babelrc
@@ -4,11 +4,12 @@
             "@babel/preset-env",
             {
                 "modules": "commonjs"
-            },
+            }
         ],
         "@babel/preset-react"
     ],
     "plugins": [
+        "lodash",
         "@babel/plugin-proposal-class-properties",
         [
             "transform-es2015-spread",
@@ -28,5 +29,5 @@
                 "corejs": 3
             }
         ]
-    ],
+    ]
 }
