--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -29,6 +29,7 @@
     "fix-orientation": "0.0.2",
     "highlight.js": "^9.15.10",
     "libphonenumber-js": "^1.7.25",
+    "lodash": "^4.17.15",
     "moment": "^2.22.2",
     "moment-range": "^1.0.5",
     "moment-timezone": "^0.5.5",
@@ -65,6 +66,7 @@
     "babel-jest": "^24.5.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-plugin-transform-es2015-spread": "^6.22.0",
     "backstopjs": "^4.3.2",
