--- a/packages/end-user/package.json
+++ b/packages/end-user/package.json
@@ -148,7 +148,7 @@
   },
   "scripts": {
     "pack": "rm -rf ./build && build-storybook -o build",
-    "cdn": "rm -rf ./cdn && webpack --config webpack.cdn.js && cp -R ./src/icons/. ./cdn/*/icons && cp -R ./src/images ./cdn/*/",
+    "cdn": "rm -rf ./cdn && webpack --config webpack.cdn.js && for dir in ./cdn/*/; do mkdir $dir/icons; done && cp -R ./src/icons/ ./cdn/*/icons/ && cp -R ./src/images/ ./cdn/*/",
     "start": "start-storybook -p 6006",
     "lint": "eslint src/** && stylelint src/**/*.scss",
     "doc": "jsdoc -c ./jsdoc.json",
