--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -19,6 +19,7 @@
     "@babel/polyfill": "^7.6.0",
     "@babel/runtime": "^7.6.2",
     "@babel/runtime-corejs3": "^7.6.2",
+    "@tippyjs/react": "^4.0.0-alpha.4",
     "classnames": "^1.2.1",
     "clipboard-polyfill": "^2.4.7",
     "clone": "^1.0.2",
@@ -28,6 +29,7 @@
     "fbjs": "^1.0.0",
     "fix-orientation": "0.0.2",
     "highlight.js": "^9.15.10",
+    "lerna": "^3.16.4",
     "libphonenumber-js": "^1.7.25",
     "lodash": "^4.17.15",
     "moment": "^2.22.2",
@@ -41,9 +43,9 @@
     "react-dnd": "^2.5.4",
     "react-dnd-html5-backend": "^2.5.4",
     "react-portal": "^4.2.0",
-    "react-tooltip": "3.11.5",
     "recharts": "^1.5.0",
     "reselect": "^2.5.1",
+    "tippy.js": "^6.1.0",
     "underscore": "^1.8.3",
     "uuid": "^2.0.3",
     "validator": "^5.2.0"
