UIP-3516: Playground integration

--- a/packages/ui-library/.babelrc
+++ b/packages/ui-library/.babelrc
@@ -10,6 +10,7 @@
     ],
     "plugins": [
         "lodash",
+        "wildcard",
         "@babel/plugin-proposal-class-properties",
         [
             "transform-es2015-spread",
