--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -19,11 +19,13 @@
     "@babel/polyfill": "^7.6.0",
     "@babel/runtime": "^7.6.2",
     "@babel/runtime-corejs3": "^7.6.2",
+    "babel-plugin-wildcard": "^6.0.0",
     "@tippyjs/react": "^4.0.0-alpha.4",
     "classnames": "^1.2.1",
     "clipboard-polyfill": "^2.4.7",
     "clone": "^1.0.2",
     "color": "^3.1.0",
+    "component-playground": "^3.2.1",
     "core-js": "^3.2.1",
     "exif-js": "^2.1.1",
     "fbjs": "^1.0.0",
