--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -62,6 +62,8 @@
     "@babel/preset-react": "^7.0.0",
     "@pingux/end-user": "^0.7.2",
     "@pingux/gulp-export": "^2.2.0",
+    "@testing-library/jest-dom": "^5.9.0",
+    "@testing-library/react": "^10.0.4",
     "acorn": "^6.0.4",
     "autoprefixer": "^9.6.4",
     "babel-eslint": "10.0.1",
