--- a/packages/end-user/package.json
+++ b/packages/end-user/package.json
@@ -20,6 +20,7 @@
     "raf": "^3.4.1",
     "re-mutable": "^1.2.6",
     "react-color": "^2.18.0",
+    "react-markdown": "^4.3.1",
     "react-portal": "^4.2.0",
     "react-tooltip": "3.11.5",
     "styled-components": "^5.1.1",
@@ -39,8 +40,11 @@
     "@storybook/addon-docs": "^5.3.18",
     "@storybook/addon-knobs": "^5.3.12",
     "@storybook/addon-links": "^5.3.12",
+    "@storybook/addon-notes": "^5.3.19",
     "@storybook/addon-storysource": "^5.3.12",
     "@storybook/react": "^5.3.12",
+    "@testing-library/jest-dom": "^5.11.0",
+    "@testing-library/react": "^10.4.3",
     "autoprefixer": "^8.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^9.0.0",
@@ -141,6 +145,9 @@
     "setupFiles": [
       "<rootDir>/src/util/polyfills.js",
       "<rootDir>/src/devUtil/enzymeSetup.js"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/devUtil/jestAfterEnvSetup.js"
     ],
     "moduleNameMapper": {
       ".+\\.(svg)$": "jest-transform-stub"
