--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -177,7 +177,7 @@
     "jest": "jest && node ./clean-after.js",
     "coverage": "jest --coverage && node ./clean-after.js",
     "coverage-ci": "jest --coverage --ci && node ./clean-after.js",
-    "test": "jest --silent",
+    "test": "jest",
     "verify": "yarn run jslint && yarn run stylelint && yarn run coverage",
     "integration": "wdio wdio.conf.js",
     "postintegration": "yarn run clean-processes",
