--- a/packages/end-user/package.json
+++ b/packages/end-user/package.json
@@ -45,6 +45,7 @@
     "@storybook/react": "^5.3.12",
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/react": "^10.4.3",
+    "@whitespace/storybook-addon-html": "^1.2.1",
     "autoprefixer": "^8.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^9.0.0",
