--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -44,6 +44,7 @@
     "react-color": "^2.13.0",
     "react-dnd": "^2.5.4",
     "react-dnd-html5-backend": "^2.5.4",
+    "react-draggable": "^4.4.3",
     "react-portal": "^4.2.0",
     "recharts": "^1.5.0",
     "reselect": "^2.5.1",
