Resolve UIP-3858 "Flow diagram palette"

--- a/packages/flow-diagram/package.json
+++ b/packages/flow-diagram/package.json
@@ -31,6 +31,7 @@
         "docs": "gulp docs"
     },
     "dependencies": {
+        "@pingux/compass": "^0.1.0-beta.28",
         "@emotion/core": "^10.0.28",
         "gojs": "^2.1.16",
         "gojs-react": "^1.0.7",
