build process, license key and fix icon paths

--- a/packages/flow-diagram/.yarnrc
+++ b/packages/flow-diagram/.yarnrc
@@ -1,1 +1,1 @@
-registry “https://art01.corp.pingidentity.com/artifactory/api/npm/npm-virtual/”
+registry "https://art01.corp.pingidentity.com/artifactory/api/npm/npm-virtual/"
