--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "private": true,
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "@babel/polyfill": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-transform-react-jsx": "^7.9.4",
     "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
     "@babel/runtime": "^7.9.2",
     "@babel/runtime-corejs3": "^7.9.2",
-    "@emotion/core": "^10.0.28",
     "@emotion/babel-preset-css-prop": "^10.0.27",
+    "@emotion/core": "^10.0.28",
+    "babel-plugin-transform-node-env-inline": "^0.4.3",
+    "create-index": "^2.6.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.5.1",
@@ -20,7 +22,6 @@
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
-    "babel-plugin-transform-node-env-inline": "^0.4.3",
     "jsdoc-to-markdown": "^6.0.1",
     "lerna": "^3.16.4",
     "react": "^16.8.6",
