--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -33,7 +33,7 @@
     "@babel/plugin-transform-spread": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
-    "@svgr/cli": "^5.3.1",
+    "@svgr/cli": "5.3.1",
     "create-index": "^2.5.0",
     "gulp": "^4.0.2",
     "gulp-debug": "^4.0.0",
