--- a/packages/astro/package.json
+++ b/packages/astro/package.json
@@ -33,6 +33,9 @@
     "@storybook/addons": "^6.0.21",
     "@storybook/react": "^6.0.21",
     "@storybook/theming": "^6.0.21",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.4",
+    "@testing-library/react-hooks": "^3.4.1",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-node-env-inline": "^0.4.3",
     "jest-emotion": "^10.0.32",
