--- a/packages/astro/package.json
+++ b/packages/astro/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.35",
+    "@rebass/forms": "^4.0.6",
     "@styled-system/prop-types": "^5.1.5",
     "@styled-system/props": "^5.1.5",
     "@styled-system/theme-get": "^5.1.2",
