--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.35",
+    "@react-aria/label": "^3.1.0",
     "@react-aria/button": "^3.2.1",
     "@react-aria/focus": "^3.2.1",
     "@react-aria/utils": "^3.2.1",
