--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/runtime-corejs3": "^7.9.2",
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@emotion/core": "^10.0.28",
+    "@testing-library/dom": "^7.24.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.4",
     "@testing-library/react-hooks": "^3.4.1",
@@ -30,7 +31,8 @@
     "lerna": "^3.16.4",
     "mutationobserver-shim": "^0.3.7",
     "react": "^16.8.6",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "regenerator-runtime": "^0.13.7"
   },
   "workspaces": [
     "packages/*"
