--- a/package.json
+++ b/package.json
@@ -50,11 +50,13 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.35",
+    "@react-aria/checkbox": "^3.2.0",
     "@react-aria/focus": "^3.2.1",
     "@react-aria/radio": "^3.1.1",
     "@react-aria/label": "^3.1.0",
     "@react-aria/utils": "^3.2.1",
     "@react-stately/radio": "^3.2.0",
+    "@react-stately/toggle": "^3.2.0",
     "@react-aria/button": "^3.2.1",
     "@rebass/forms": "^4.0.6",
     "@styled-system/prop-types": "^5.1.5",
