--- a/packages/end-user/package.json
+++ b/packages/end-user/package.json
@@ -36,6 +36,8 @@
     "@babel/plugin-transform-runtime": "^7.4.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@mdi/js": "^5.5.55",
+    "@mdi/react": "^1.4.0",
     "@storybook/addon-actions": "^6.0.21",
     "@storybook/addon-docs": "^6.0.21",
     "@storybook/addon-knobs": "^6.0.21",
