--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "mutationobserver-shim": "^0.3.7",
     "react": "^16.8.6",
     "react-dom": "^16.13.1",
+    "whatwg-fetch": "^3.4.1",
     "regenerator-runtime": "^0.13.7"
   },
   "workspaces": [
