UIP-3906 - Astro Link Rebass

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
             }
         ],
         "no-underscore-dangle": 0,
+        "no-multiple-empty-lines": ["error", { "max": 2, "maxBOF": 0, "maxEOF": 0 }],
         "prefer-destructuring": 0,
         "react/forbid-prop-types": 0,
         "react/jsx-filename-extension": 0,
