--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@react-aria/focus": "^3.2.1",
     "@react-aria/radio": "^3.1.1",
     "@react-aria/label": "^3.1.0",
+    "@react-aria/link": "^3.1.1",
     "@react-aria/utils": "^3.2.1",
     "@react-stately/radio": "^3.2.0",
     "@react-stately/toggle": "^3.2.0",
