--- a/packages/astro/package.json
+++ b/packages/astro/package.json
@@ -56,7 +56,9 @@
     "@react-aria/checkbox": "^3.2.0",
     "@react-aria/focus": "^3.2.1",
     "@react-aria/label": "^3.1.0",
+    "@react-aria/listbox": "^3.2.1",
     "@react-aria/radio": "^3.1.1",
+    "@react-aria/separator": "^3.1.1",
     "@react-aria/link": "^3.1.1",
     "@react-aria/utils": "^3.2.1",
     "@react-stately/radio": "^3.2.0",
