--- a/packages/schema-form/package.json
+++ b/packages/schema-form/package.json
@@ -40,6 +40,7 @@
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/react": "^10.4.3",
     "@testing-library/react-hooks": "^3.4.1",
+    "@testing-library/user-event": "^12.1.5",
     "ajv": "^6.12.2",
     "babel-eslint": "^9.0.0",
     "babel-loader": "^8.1.0",
