--- a/packages/flow-diagram/package.json
+++ b/packages/flow-diagram/package.json
@@ -6,7 +6,7 @@
     "homepage": "",
     "license": "UNLICENSED",
     "main": "lib/cjs/index.js",
-    "module": "lib/ndex.js",
+    "module": "lib/index.js",
     "directories": {
         "lib": "lib"
     },
@@ -51,7 +51,6 @@
     "devDependencies": {
         "@storybook/addon-actions": "^5.3.12",
         "@storybook/addon-docs": "^5.3.18",
-        "@storybook/addon-knobs": "^5.3.12",
         "@storybook/addon-links": "^5.3.12",
         "@storybook/addon-notes": "^5.3.19",
         "@storybook/addon-storysource": "^5.3.12",
