UIP-4054: Fixed issue where icons weren't being deployed

--- a/packages/flow-diagram/package.json
+++ b/packages/flow-diagram/package.json
@@ -23,8 +23,9 @@
     "scripts": {
         "build": "rm -rf lib && npm-run-all build:*",
         "build:icons": "cd ../icons && yarn build",
-        "build:cjs": "BABEL_ENV=cjs babel --config-file ./babel.config.js src/ --out-dir lib/cjs/",
-        "build:esm": "BABEL_ENV=esm babel --config-file ./babel.config.js src/ --out-dir lib/",
+        "build:cjs": "BABEL_ENV=cjs NODE_ENV=production babel --config-file ./babel.config.js src/ --out-dir lib/cjs/",
+        "build:esm": "BABEL_ENV=esm NODE_ENV=production babel --config-file ./babel.config.js src/ --out-dir lib/",
+        "build:assets": "cp -r ./src/img ./lib && cp -r ./src/img ./lib/cjs",
         "coverage": "jest --coverage",
         "demo": "rm -rf ./upload && yarn build:icons && build-storybook -o upload",
         "verify": "yarn lint && yarn docs && yarn build-demo && test",
