UX-981: DeviceSelector, SaveableTextInput, & PopoverMenu for end-user

--- a/packages/end-user/package.json
+++ b/packages/end-user/package.json
@@ -13,6 +13,7 @@
     "@babel/polyfill": "^7.4.0",
     "@babel/runtime": "^7.4.2",
     "@babel/runtime-corejs3": "^7.4.2",
+    "@popperjs/core": "^2.5.3",
     "classnames": "^2.2.6",
     "core-js": "^3.0.1",
     "fbjs": "^1.0.0",
@@ -22,6 +23,7 @@
     "re-mutable": "^1.2.6",
     "react-color": "^2.18.0",
     "react-markdown": "^4.3.1",
+    "react-popper": "^2.2.3",
     "react-portal": "^4.2.0",
     "react-tooltip": "3.11.5",
     "styled-components": "^5.1.1",
@@ -160,7 +162,7 @@
   "scripts": {
     "pack": "rm -rf ./build && build-storybook -o build",
     "cdn": "rm -rf ./cdn && webpack --config webpack.cdn.js && for dir in ./cdn/*/; do mkdir $dir/icons; mkdir $dir/logos; mkdir $dir/images; done && cp -R ./src/icons/. ./cdn/*/icons/ && cp -R ./src/logos/. ./cdn/*/logos/ && cp -R ./src/images/. ./cdn/*/images",
-    "start": "start-storybook -p 6006",
+    "start": "start-storybook -p 6006 --no-dll",
     "lint": "eslint src/** && stylelint src/**/*.scss",
     "doc": "jsdoc -c ./jsdoc.json",
     "dist": "gulp build-dist && yarn run cdn && cp -R ./cdn/*/. ./dist/",
