--- a/packages/flow-diagram/package.json
+++ b/packages/flow-diagram/package.json
@@ -37,6 +37,8 @@
     },
     "dependencies": {
         "@emotion/core": "^10.0.28",
+        "@mdi/js": "^5.8.55",
+        "@mdi/react": "^1.4.0",
         "@pingux/compass": "^0.1.0-beta.28",
         "@pingux/icons": "^0.2.0",
         "@testing-library/jest-dom": "^5.11.4",
