--- a/packages/astro/package.json
+++ b/packages/astro/package.json
@@ -84,6 +84,8 @@
     "prop-types": "^15.7.2",
     "rebass": "^4.0.7",
     "regenerator-runtime": "^0.13.7",
-    "styled-system": "^5.1.5"
+    "styled-system": "^5.1.5",
+    "@tippyjs/react":"4.2.0",
+    "tippy.js":"6.2.7"
   }
 }
