--- a/packages/astro/package.json
+++ b/packages/astro/package.json
@@ -65,11 +65,12 @@
     "@react-aria/button": "^3.2.1",
     "@react-aria/checkbox": "^3.2.0",
     "@react-aria/focus": "^3.2.1",
+    "@react-aria/interactions": "^3.3.0",
     "@react-aria/label": "^3.1.0",
+    "@react-aria/link": "^3.1.1",
     "@react-aria/listbox": "^3.2.1",
     "@react-aria/radio": "^3.1.1",
     "@react-aria/separator": "^3.1.1",
-    "@react-aria/link": "^3.1.1",
     "@react-aria/utils": "^3.2.1",
     "@react-stately/radio": "^3.2.0",
     "@react-stately/toggle": "^3.2.0",
@@ -78,6 +79,7 @@
     "@styled-system/props": "^5.1.5",
     "@styled-system/theme-get": "^5.1.2",
     "chroma-js": "^2.1.0",
+    "classnames": "^2.2.6",
     "emotion-normalize": "^10.1.0",
     "emotion-theming": "^10.0.27",
     "lodash": "^4.17.20",
