UIP-3983: Astro tabs

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,5 +43,10 @@
                 "extensions": [".js", ".jsx", ".mdx"]
             }
         }
-    }
+    },
+    "overrides": [
+        {
+            "files": [ "src/**/*.js", "src/**/*.jsx" ]
+        }
+    ]
 }
