--- a/package.json
+++ b/package.json
@@ -71,8 +71,10 @@
     "@react-aria/listbox": "^3.2.1",
     "@react-aria/radio": "^3.1.1",
     "@react-aria/separator": "^3.1.1",
-    "@react-aria/tabs": "^3.0.0-alpha.1",
     "@react-aria/utils": "^3.2.1",
+    "@react-aria/visually-hidden":"3.2.1",
+    "@react-aria/switch":"3.1.1",
+    "@react-aria/tabs": "^3.0.0-alpha.1",
     "@react-stately/collections": "^3.2.1",
     "@react-stately/list": "^3.2.1",
     "@react-stately/radio": "^3.2.0",
