--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -67,6 +67,7 @@
     "@pingux/gulp-export": "^2.2.0",
     "@testing-library/jest-dom": "^5.9.0",
     "@testing-library/react": "^10.0.4",
+    "@testing-library/user-event": "12.1.6",
     "acorn": "^6.0.4",
     "autoprefixer": "^9.6.4",
     "babel-eslint": "10.0.1",
