--- a/packages/end-user/.eslintrc.json
+++ b/packages/end-user/.eslintrc.json
@@ -32,5 +32,13 @@
                 "extensions": [".js", ".mdx"]
             }
         }
-    }
+    },
+    "overrides": [
+        {
+            "files": ["src/**/*.stories.js", "src/**/*.story.js", "src/**/*.stories.jsx", "src/**/*.story.jsx"],
+            "rules": {
+                "react/prop-types": 0
+            }
+        }
+    ]
 }
