--- a/packages/schema-form/.eslintrc.json
+++ b/packages/schema-form/.eslintrc.json
@@ -29,5 +29,13 @@
         "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
         "import/prefer-default-export": [0],
         "import/no-named-as-default-member": [0]
-    }
+    },
+    "overrides": [
+        {
+            "files": ["src/**/*.stories.js", "src/**/*.story.js", "src/**/*.stories.jsx", "src/**/*.story.jsx"],
+            "rules": {
+                "react/prop-types": 0
+            }
+        }
+    ]
 }
