--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,6 +47,12 @@
     "overrides": [
         {
             "files": [ "src/**/*.js", "src/**/*.jsx" ]
+        },
+        {
+            "files": ["src/**/*.stories.js", "src/**/*.story.js", "src/**/*.stories.jsx", "src/**/*.story.jsx"],
+            "rules": {
+                "react/prop-types": 0
+            }
         }
     ]
 }
